Blurred and fixed background, borders

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    
 }
 
 @font-face {
@@ -14,8 +15,22 @@
 }
 
 html {
-    background-image: url(images/computers_circuits_chip_computer_electronics_transistor_circuit_desktop_2000x1333_hd-wallpaper-729711.jpg);
-        
+    height: 100%;   
+}
+
+#bgImageContainer {
+     background-image: url(images/computers_circuits_chip_computer_electronics_transistor_circuit_desktop_2000x1333_hd-wallpaper-729711.jpg);
+    z-index: -1;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    -webkit-filter: blur(3px);
+    -webkit-background-size: cover;
+    -webkit-background-position: center;
 }
 
 header {
@@ -26,19 +41,17 @@ header {
     font-family: SaucerBB;
     color: #CCCCCC;
 
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .5);
     
     width: auto;
     height: 130px;
 }
 
-header span {
-    float: left;
-    display: inline;
+header a {
 }
 
-#logo {
-      display: block;
+header span {
+    float: left; 
 }
 
 #team_number {
@@ -87,17 +100,24 @@ header span {
     font-size: 1.2em;
     clear: both;
     top: 75px;
+    height: 100%;
+}
+
+#contacts_table {
+    width: 100%;
+    height: 300px;
 }
 
 #main {
-    
-    max-width: 1000px;
+    max-width: 60%;
     margin: auto;
     float: none;
     text-align: center;
     
-    border-radius: 1000px;
-    background-color: rgba(0, 0, 0, .6);
+    border: 7px solid rgba(255, 255, 255, .2);
+    
+    border-radius: 100px;
+    background-color: rgba(0, 0, 0, .5);
     padding: 25px;
     
     margin-top: 50px;
